added spring cloud netflix zuul api gateway code

--- a/microservice-spring-cloud-shopping-sample/spring-cloud-netflix-zuul-api-gateway/pom.xml
+++ b/microservice-spring-cloud-shopping-sample/spring-cloud-netflix-zuul-api-gateway/pom.xml
@@ -22,10 +22,18 @@
     <dependencies>
 
         <!-- 声明对Spring Cloud Netflix Zuul 的依赖 -->
+        <!-- 默认集成了 spring-cloud-starter-netflix-hystrix 断路器功能 -->
+        <!-- 默认集成了 spring-boot-starter-actuator 健康检查功能 -->
+        <!-- 默认集成了 spring-cloud-starter-netflix-ribbon 负载均衡 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
         </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.cloud</groupId>-->
+<!--            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>-->
+<!--        </dependency>-->
 
         <!-- added Spring Web MVC Support -->
         <dependency>
